--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -253,10 +253,33 @@ section.cards-section {
 
     .card-body {
       flex: 0 0 auto;
-      min-height: 186px;
+      height: 186px;
+      overflow: hidden;
       background: $grey;
       padding: 20px 18px;
       border-radius: 0 0 $border-radius $border-radius;
+
+      // &::before {
+      //   content: "...";
+      //   position: absolute;
+      //   right: 0;
+      //   bottom: 15px;
+      //   background: transparent;
+      //   height: 20px;
+      //   width: 48%;
+      //   z-index: 2;
+      // }
+
+      &::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        background-color: $grey;
+        height: 20px;
+        width: 100%;
+        border-radius: 0 0 $border-radius $border-radius;
+      }
 
       h1 {
         font-size: $font-size-18-default;
@@ -268,6 +291,7 @@ section.cards-section {
     .first-row {
       display: flex;
       justify-content: space-between;
+      align-items: flex-start;
       margin-right: -5px;
       margin-left: -5px;
 
@@ -278,9 +302,10 @@ section.cards-section {
       .card-timer {
         display: flex;
         justify-content: flex-end;
-        flex-wrap: wrap;
+        align-items: center;
         font-weight: 700;
         padding: 0 5px;
+        white-space: nowrap;
 
         .clock-icon {
           margin-right: 7px;
