--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -43,6 +43,8 @@ body {
   opacity: 1;
   padding: 2.6rem 6.2rem;
   font-size: $font-size-18-default;
+  max-width: 1800px;
+  margin: auto;
 
   @include screen-max($lg) {
     padding: 2.6rem 4.5rem;
@@ -274,6 +276,7 @@ section.cards-section {
       background: $grey;
       padding: 20px 18px;
       border-radius: 0 0 $border-radius $border-radius;
+      overflow: hidden;
 
       &::after {
         content: "";
@@ -330,7 +333,6 @@ section.cards-section {
         padding: 0 5px 1rem;
         font-size: $font-size-12;
         height: 99px;
-        overflow: scroll;
       }
 
       .card-ingredients {
