--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -274,6 +274,7 @@ section.cards-section {
       background: $grey;
       padding: 20px 18px;
       border-radius: 0 0 $border-radius $border-radius;
+      overflow: hidden;
 
       &::after {
         content: "";
@@ -330,7 +331,6 @@ section.cards-section {
         padding: 0 5px 1rem;
         font-size: $font-size-12;
         height: 99px;
-        overflow: scroll;
       }
 
       .card-ingredients {
