--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -94,6 +94,20 @@ body {
   background: $white !important;
 }
 
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.display-none {
+  display: none;
+}
+
 // Header
 header {
   display: flex;
