--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -203,10 +203,11 @@ section.dropdown-section {
         color: $white;
         height: 100%;
 
-        &:focus {
-          outline: 2px solid $white;
-          border: 1px solid $primary;
-        }
+        // &:focus {
+        //   outline: 2px solid $white;
+        //   border: 1px solid $primary;
+        // }
+
         &::placeholder {
           color: $white;
           opacity: 0.5;
@@ -214,12 +215,12 @@ section.dropdown-section {
       }
 
       .input-group-append {
-        .dropdown-toggle {
-          &:focus {
-            outline: 2px solid $white;
-            border: 1px solid $primary;
-          }
-        }
+        // .dropdown-toggle {
+        //   &:focus {
+        //     outline: 2px solid $white;
+        //     border: 1px solid $primary;
+        //   }
+        // }
 
         &.show {
           .arrow-down {
